--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 
 *{
     margin: 0;  
@@ -8,4 +10,5 @@
     box-sizing: border-box;
     text-decoration: none;
     overflow: hidden;
+    font-family: "Outfit", sans-serif;
 }
