Make a Qr Box & Add the img and text

--- a/style.css
+++ b/style.css
@@ -31,3 +31,26 @@ main .qr-box{
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
 }
+
+.qr-box .q-box-img img{
+    width: 100%;
+    border-radius: 18px;
+    -webkit-border-radius: 18px;
+    -moz-border-radius: 18px;
+    -ms-border-radius: 18px;
+    -o-border-radius: 18px;
+}
+
+.qr-box .q-box-info{
+    text-align: center;
+    margin-top: 10px;
+    padding: 0 10px;
+}
+.qr-box .q-box-info h3{
+    font-size: 20px;
+}
+.qr-box .q-box-info p{
+    margin-top: 10px;
+    color: hsl(220, 15%, 55%);
+    font-size: 15px;
+}
